Change Java version from 18 to 11